# rust-yew-fullstack-experiment

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  build.rs  docker-compose.yml  justfile  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.circleci/: config.yml  config2.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~
.gitsecret/paths/: mapping.cfg
assets/diagrams/: architecture.component_diagram.puml
backend/: Cargo.toml
backend/src/app/: mod.rs
backend/src/drivers/: mod.rs
backend/src/services/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
configs/: common.toml  general.toml  logger.toml
configs/backend/: general.toml  logger.toml  server.toml
configs/frontend/: general.toml  logger.toml
configs/logger/: base.dev.toml
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  settings.rs
crates/backend/src/services/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: settings.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/.cargo/: config.toml
crates/frontend/src/: lib.rs  settings.rs
crates/frontend/src/app/: mod.rs
crates/frontend/src/features/base_component/: mod.rs
crates/frontend/src/macros/: attrs.rs  mod.rs
crates/frontend/src/presentation/: mod.rs  routes.rs
crates/frontend/src/presentation/by_features/: hello_server.html  hello_server.rs  mod.rs
crates/frontend/src/presentation/by_features/lightbox/: view.rs  viewmodel.rs
crates/frontend/src/presentation/components/: mod.rs
crates/frontend/src/presentation/components/custom_children_container/: mod.rs
crates/frontend/src/presentation/components/lightbox/: mod.rs  modal_view.rs  view.rs
crates/frontend/src/presentation/layout/: footer.rs  header.rs  mod.rs
crates/frontend/src/ui/: mod.rs
crates/frontend/styles/: tailwind.config.js  tailwind.min.css
crates/logger/: Cargo.toml
crates/logger/src/: main.rs
crates/logger/src/app/: mod.rs  tracing_layer.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: lib.rs  logger.rs  main.rs  prometheus.rs
frontend/: Cargo.toml
frontend/src/app/: mod.rs
frontend/src/services/: mod.rs
logs/: prefix.log.2022-10-16-00
monitoring/: setup_guide.html
monitoring/alertmanager/: config.yml  secret.config.yml.secret
monitoring/grafana/provisioning/dashboards/: providers.yml
monitoring/loki/: daemon.json
monitoring/prometheus/: config.yml  rules.yml
monitoring/promtail/: config.yml
