[workspace]
members = [
    # Full stack.
    "crates/backend",
    "crates/frontend",
    "crates/common",

    # Utils.
    "crates/logger",
]

default-members = ["crates/backend", "crates/frontend", "crates/logger"]

[profile.release]
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
