[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/bin/main.rs"

[dependencies]
common = { path = "../common" }

color-eyre = "0.6"
tracing = "0.1"
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
