[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/bin/main.rs"

[dependencies]
frontend = { path = "../frontend" }
common = { path = "../common" }
monitoring = { path = "../monitoring" }
settings = { path = "../settings" }

color-eyre = "0.6"
smartstring = "1.0"
uuid = "1.2"
tracing = "0.1"
tracing-log = "0.1"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
derive-getters = "0.2"
lazy_static = "1.4"
axum = "0.6"
clap = { version = "4.0", features = ["derive"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["full", "fs", "compression-br"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["ssr"] }
futures = { version = "0.3", features = ["std"], default-features = false }
axum-macros = "0.3.1"
qstring = "0.7"
