[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }

wasm-bindgen = "0.2"
wee_alloc = "0.4"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr", "hydration"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
serde = { version = "1.0", features = ["derive"] }
derive-getters = "0.2"
lazy_static = "1.4"
gloo-net = "0.2"
