[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend-bin"
path = "src/bin/main.rs"

[lib]
name = "frontend"
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }

wasm-bindgen = "0.2"
web-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew/", features = ["hydration"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.2"
concat-string = "1.0"
ufmt = "0.2"
lazy_static = "1.4"
lol_alloc = "0.3"
