[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend-lib"
path = "src/bin/main.rs"

[lib]
name = "frontend"
crate-type = ["cdylib", "rlib"]

[features]
default = []
csr = ["yew/csr"]
ssr = ["yew/hydration"]

[dependencies]
common = { path = "../common" }

wasm-bindgen = "0.2"
web-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew/" }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
gloo = "0.8"
gloo-net = "0.2"
gloo-console = "0.2"
serde = { version = "1.0", features = ["derive"] }
lol_alloc = "0.3"
indexmap = "1.9"
