[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# TEMPORARY
[[bin]]
name = "logger"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartstring = { version = "1.0.1", features = ["serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }