[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

# TEMP: TEMPORARY
[[bin]]
name = "monitoring"
path = "src/main.rs"

[dependencies]

tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
url = "2.3"
chrono = "0.4"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartstring = { version = "1.0.1", features = ["serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-wasm = "0.2"
tracing-loki = "0.2.1"
tracing-bunyan-formatter = "0.3"
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.2"
futures = { version = "0.3", default-features = false }
rand = "0.8"